docs : Cat modal 관련 파일 정리

--- a/src/component/container/cat/style.css
+++ b/src/component/container/cat/style.css
@@ -32,7 +32,7 @@
 .dark-hover {
   width: inherit;
   height: inherit;
-  border-radius: inherit;
+  border-radius: 10px;
   background-color: #000000;
   opacity: 0;
   position: absolute;
